--- a/assets/css/magnific-popup.css
+++ b/assets/css/magnific-popup.css
@@ -58,7 +58,7 @@
 .mfp-zoom-out-cur, .mfp-zoom-out-cur .mfp-image-holder .mfp-close {
   cursor: -moz-zoom-out;
   cursor: -webkit-zoom-out;
-  cursor: zoom-out; }
+  cursor: default; }
 
 .mfp-zoom {
   cursor: pointer;
@@ -84,7 +84,7 @@
   display: none !important; }
 
 .mfp-preloader {
-  color: #CCC;
+  color: #FE1B48 !important;
   position: absolute;
   top: 50%;
   width: auto;
@@ -96,7 +96,7 @@
   .mfp-preloader a {
     color: #CCC; }
     .mfp-preloader a:hover {
-      color: #FFF; }
+      color: #FE1B48; }
 
 .mfp-s-ready .mfp-preloader {
   display: none; }
@@ -133,7 +133,7 @@ button::-moz-focus-inner {
   text-align: center;
   opacity: 0.65;
   padding: 0 0 18px 10px;
-  color: #FFF;
+  color: #FE1B48;
   font-style: normal;
   font-size: 28px;
   font-family: Arial, Baskerville, monospace; }
@@ -144,11 +144,11 @@ button::-moz-focus-inner {
     top: 1px; }
 
 .mfp-close-btn-in .mfp-close {
-  color: #333; }
+  color: #FE1B48; }
 
 .mfp-image-holder .mfp-close,
 .mfp-iframe-holder .mfp-close {
-  color: #FFF;
+  color: #FE1B48 !important;
   right: -6px;
   text-align: right;
   padding-right: 6px;
@@ -202,7 +202,7 @@ button::-moz-focus-inner {
 .mfp-arrow-left {
   left: 0; }
   .mfp-arrow-left:after {
-    border-right: 17px solid #FFF;
+    border-right: 17px solid #FE1B48;
     margin-left: 31px; }
   .mfp-arrow-left:before {
     margin-left: 25px;
@@ -211,7 +211,7 @@ button::-moz-focus-inner {
 .mfp-arrow-right {
   right: 0; }
   .mfp-arrow-right:after {
-    border-left: 17px solid #FFF;
+    border-left: 17px solid #FE1B48;
     margin-left: 39px; }
   .mfp-arrow-right:before {
     border-left: 27px solid #3F3F3F; }
