--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1526,7 +1526,7 @@ vertical-align: middle;
 			}
 
 			table.default thead {
-				background: blue;
+				background: red;
 				color: #fff;
 				font-weight: 400;
 				text-transform: uppercase;
@@ -1753,7 +1753,7 @@ cursor:pointer;
 		position: relative;
 		overflow: hidden;
 		background: transparent;
-                height: 800px;
+                height: 700px;
                 border-bottom: solid 1px #000;
 		box-shadow: 0px 4px 4px #FE1B48 ;              
 	}
@@ -1762,7 +1762,7 @@ cursor:pointer;
 		position: relative;
 		overflow: hidden;
 		background: transparent;
-                height: 1900px;
+                height: 1500px;
                 border-bottom: solid 1px #000;
 		box-shadow: 0px 4px 4px #FE1B48 ;              
 	}
@@ -1872,7 +1872,7 @@ progress {
   background-color: transparent;
 
   /* For IE10+, color of the progress bar */
-  color: red;
+  color: red !important;
 }
 
 progress::-webkit-progress-bar {
@@ -1884,7 +1884,7 @@ progress::-webkit-progress-bar {
 }
 
 .flat::-moz-progress-bar {
-  background-color: red;
+  background-color: red !important;
 }
 
 .single::-webkit-progress-value {
@@ -1899,15 +1899,15 @@ progress::-webkit-progress-bar {
 
 .multiple::-webkit-progress-value {
   background-image: -webkit-linear-gradient(-45deg, 
-                               transparent 33%, rgba(0, 0, 0, .1) 33%, 
-                               rgba(0,0, 0, .1) 66%, transparent 66%),
+                               transparent 33%, red 33%, 
+                               red 66%, transparent 66%),
                       -webkit-linear-gradient(left, red, red);
 }
 
 .multiple::-moz-progress-bar {
   background-image: -moz-linear-gradient(-45deg, 
-                               transparent 33%, rgba(0, 0, 0, .1) 33%, 
-                               rgba(0,0, 0, .1) 66%, transparent 66%),
+                               transparent 33%, red 33%, 
+                               red 66%, transparent 66%),
                       -moz-linear-gradient(left, red, red);
 }
 
@@ -1922,7 +1922,7 @@ progress::-webkit-progress-bar {
 }
 
 .progress-bar {
-  background-color: red;
+  background-color: red !important;
   width: 50%;
   display: block;
   height: inherit;
@@ -1945,7 +1945,7 @@ width: 105px;
 
 #img{
     
-    width: 20%;
+    width: 10%;
     
 }
 
@@ -1953,7 +1953,8 @@ width: 105px;
 /* Nav */
 
 	#nav {
-		cursor: default;                
+		cursor: default;     
+                margin-left: 5%;
                 
 	}   
         
@@ -2677,7 +2678,7 @@ width: 105px;
                         
 				#navPanel .link {
 					display: block;
-					color: green;
+					color: red;
 					text-decoration: none;
 					height: 44px;
 					line-height: 44px;
@@ -2813,7 +2814,7 @@ width: 105px;
 
 		/* Nav */
 
-			#nav, #top, #servicios {
+			#nav, #top, #servicios, #flechas, #puntos {
 				display: none;
 			}
 
